--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     </article>
                 </div>
                 <div class="box">
-                    <nav class="pagination" role="navigation" aria-label="pagination">
+                    <nav class="pagination is-rounded" role="navigation" aria-label="pagination">
                         <a class="pagination-previous">Previous</a>
                         <a class="pagination-next">Next page</a>
                         <ul class="pagination-list">
