Change structure files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to ForumStack !</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/3.2.89/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
     <nav class="navbar forum" role="navigation" aria-label="main navigation">
@@ -25,6 +25,9 @@
                 <div class="navbar-start">
                     <a href="#" class="navbar-item">
                       Home
+                    </a>
+                    <a href="#" class="navbar-item">
+                      About
                     </a>
                 </div>
                 <div class="navbar-end">
@@ -80,7 +83,7 @@
                     <article class="media">
                         <div class="media-left">
                             <figure class="image avatar is-64x64">
-                                <img src="img/1.png" alt="Image" class="is-rounded">
+                                <img src="assets/img/1.png" alt="Image" class="is-rounded">
                             </figure>
                         </div>
                         <div class="media-content">
@@ -121,7 +124,7 @@
                     <article class="media">
                         <div class="media-left">
                             <figure class="image avatar is-64x64">
-                                <img src="img/4.png" alt="Image" class=" is-rounded">
+                                <img src="assets/img/4.png" alt="Image" class=" is-rounded">
                             </figure>
                         </div>
                         <div class="media-content">
@@ -160,7 +163,7 @@
                     <article class="media">
                         <div class="media-left">
                             <figure class="image avatar is-64x64">
-                                <img src="img/2.png" alt="Image" class=" is-rounded">
+                                <img src="assets/img/2.png" alt="Image" class=" is-rounded">
                             </figure>
                         </div>
                         <div class="media-content">
@@ -197,7 +200,7 @@
                     <article class="media">
                         <div class="media-left">
                             <figure class="image avatar is-64x64">
-                                <img src="img/3.png" alt="Image" class="is-rounded">
+                                <img src="assets/img/3.png" alt="Image" class="is-rounded">
                             </figure>
                         </div>
                         <div class="media-content">
@@ -234,7 +237,7 @@
                     <article class="media">
                         <div class="media-left">
                             <figure class="image avatar is-64x64">
-                                <img src="img/4.png" alt="Image" class=" is-rounded">
+                                <img src="assets/img/4.png" alt="Image" class=" is-rounded">
                             </figure>
                         </div>
                         <div class="media-content">
@@ -273,7 +276,7 @@
                     <article class="media">
                         <div class="media-left">
                             <figure class="image avatar is-64x64">
-                                <img src="img/2.png" alt="Image" class=" is-rounded">
+                                <img src="assets/img/2.png" alt="Image" class=" is-rounded">
                             </figure>
                         </div>
                         <div class="media-content">
